Fix styling on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ body {
 
     .container .row .no-float {
         display: table-cell;
-        float: none;
     }
 
 .header {
